--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ejs</title>
+    <title>Document</title>
   </head>
   <body>
-    <ul>
-      <% for (let i in arr){ %>
-      <li><%= arr[i] %></li>
-      <% } %>
-    </ul>
+    <h1>Hello world!!!</h1>
   </body>
 </html>
